--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,12 +1,8 @@
 ---
-name: Tails Azimuth
+name: so
 avatar: /static/images/avatar.png
-occupation: Professor of Atmospheric Science
-company: Stanford University
-email: address@yoursite.com
-twitter: https://twitter.com/Twitter
-linkedin: https://www.linkedin.com
-github: https://github.com
+email: ansso8430@gmail.com
+github: https://github.com/ansso8430
 ---
 
 Tails Azimuth is a professor of atmospheric sciences at the Stanford AI Lab. His research interests includes complexity modelling of tailwinds, headwinds and crosswinds.
