--- a/data/blog/rendering-engine.mdx
+++ b/data/blog/rendering-engine.mdx
@@ -6,7 +6,7 @@ tags: ['javascript', 'web', 'study']
 draft: false
 summary: '브라우저의 주요 구성 요소 중 하나인 렌더링 엔진, 이를 통해 브라우저는 어떻게 동작하는가? 렌더링 엔진의 동작 과정과 웹브라우저를 살펴보자.'
 layout: PostLayout
-canonicalUrl: https://tailwind-nextjs-starter-blog.vercel.app/blog/Rendering engine
+canonicalUrl: https://hi-so-blog.vercel.app/blog/Rendering-engine
 ---
 
 # Introduction
