about-page setting

--- a/data/authors/sparrowhawk.mdx
+++ b/data/authors/sparrowhawk.mdx
@@ -1,7 +1,7 @@
 ---
 name: so
 avatar: /static/images/avatar.png
-occupation: Front-end web development
+occupation: Frontend Developer
 company: ^ㅡㅡㅡㅡㅡㅡ^
 ---
 
