--- a/data/blog/rendering-engine.mdx
+++ b/data/blog/rendering-engine.mdx
@@ -62,48 +62,53 @@ _로딩 최적화 더 알아보기!_ - [optimizing-Loading](https://seokzin.tist
 
 ## 브라우저 주요 구성요소
 
-![brower-component](/public/static/images/brower-component.jpeg)
-
-![brower-rendering](/public/static/images/brower-rendering.jpg)
+<p align="center">
+  <img src="/static/images/rendering-engine/brower-component.png" />
+  <img src="/static/images/rendering-engine/brower-rendering.png" />
+</p>
 
 - 렌더링 엔진 : 요청한 콘텐츠를 표시. 예를 들어 HTML을 요청하면 HTML과 CSS를 파싱하여 화면에 표시함.
 
 ## 렌더링 엔진의 동작과정
 
-![rendering-engine](/public/static/images/rendering-engine.jpg)
+<p align="center">
+  <img src="/static/images/rendering-engine/rendering-engine.png" />
+</p>
 
 1. 문서를 읽어 브라우저가 문법을 분석, 코드를 이해한다.
    `<script>` 태그를 만나면 JS를 해석할 때까지 파싱을 멈춘다
 1. 콘텐츠 트리 내부에서 태그를 DOM노드로 변환한다.
 1. 스타일 정보와 HTML 표시 규칙은 DOM과 CSSOM을 결합하여 "렌더 트리"라고 부르는 또 다른 트리를 생성한다.
    즉, 어떤 엘리먼트에 어떤 스타일을 적용할 것인지 정해진다
+
+   <p align="center">
+     <img src="https://web.dev/static/articles/critical-rendering-path/render-tree-construction/image/dom-cssom-are-combined-8de5805b2061e_856.png?hl=ko" />
+   </p>
+   <br />
+
 1. 각 요소의 크기와 위치를 계산한다. (Layout 단계)
+   <img src="/static/images/rendering-engine/viewport-layout.png" />
 1. 요소를 실제로 픽셀로 변환하여 그린다. (Paint 단계, Rasterize)
+
+   <img src="/static/images/rendering-engine/viewport-paint.png" />
    픽셀로 그려진 여러 레이어를 합성한다. (Compositing 단계)
+   <img src="/static/images/rendering-engine/viewport-compositing.png" />
 
    <br />
    <br />
-
-![rendering-tree](https://web.dev/static/articles/critical-rendering-path/render-tree-construction/image/dom-cssom-are-combined-8de5805b2061e_856.png?hl=ko)
-
-<figcaption align="center">render tree</figcaption>
-<br />
-
-![viewport-layout](/public/static/images/viewport-layout.jpg)
-
-<figcaption align="center">layout</figcaption>
-<br />
-
-![viewport-paint](/public/static/images/viewport-paint.jpg)
-
-<figcaption align="center">paint</figcaption>
-<br />
-
-![viewport-compositing](/public/static/images/viewport-compositing.jpg)
-
-<figcaption align="center">compositing</figcaption>
-<br />
 
 _브라우저는 어떻게 동작하는가?_ - [HowBrowsersWork: Behindthescenesofmodernwebbrowsers](https://d2.naver.com/helloworld/59361)
 
-출처
+<details>
+<summary>출처</summary>
+<div markdown="1">
+
+_이 글은 The RED : 프론트엔드 Back to the Basics : 지속 가능한 코드작성과 성능 향상법 by 김태곤 강의를 듣고 추가로 공부한 내용을 작성한 글입니다._
+
+- Processing Model https://www.w3.org/TR/navigation-timing-2/#processing-model
+- 로딩 최적화 https://seokzin.tistory.com/entry/JavaScript-%EB%A1%9C%EB%94%A9-%EC%B5%9C%EC%A0%81%ED%99%94
+- 렌더링 트리 생성 https://web.dev/articles/critical-rendering-path/render-tree-construction?hl=ko
+- 브라우저는 어떻게 동작하는가? https://d2.naver.com/helloworld/59361
+
+</div>
+</details>
