--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,6 +1,8 @@
 ---
 name: so
 avatar: /static/images/avatar.png
+occupation: Frontend Developer
+company: ^ㅡㅡㅡㅡㅡㅡ^
 email: ansso8430@gmail.com
 github: https://github.com/ansso8430
 ---
@@ -13,10 +15,28 @@ Just do it! 고민보단 행동을! 항상 도전하는 개발자입니다. <br 
 협업을 위해 배려하며, 성장하기 위해 노력합니다. 🍀
 
 <p>
-  <img src="https://img.shields.io/badge/javascript-F7DF1E?style=flat&logo=javascript&logoColor=white" />
-  <img src="https://img.shields.io/badge/React-61DAFB?style=flat&logo=React&logoColor=white" />
-  <img src="https://img.shields.io/badge/Typescript-3178C6?style=flat&logo=Typescript&logoColor=white" />
-  <img src="https://img.shields.io/badge/HTML5-E34F26?style=flat&logo=HTML5&logoColor=white" />
-  <img src="https://img.shields.io/badge/CSS3-1572B6?style=flat&logo=CSS3&logoColor=white" />
-  <img src="https://img.shields.io/badge/github-181717?style=flat&logo=github&logoColor=white" />
+  <img
+    className="center"
+    src="https://img.shields.io/badge/javascript-F7DF1E?style=flat&logo=javascript&logoColor=white"
+  />
+  <img
+    className="center"
+    src="https://img.shields.io/badge/React-61DAFB?style=flat&logo=React&logoColor=white"
+  />
+  <img
+    className="center"
+    src="https://img.shields.io/badge/Typescript-3178C6?style=flat&logo=Typescript&logoColor=white"
+  />
+  <img
+    className="center"
+    src="https://img.shields.io/badge/HTML5-E34F26?style=flat&logo=HTML5&logoColor=white"
+  />
+  <img
+    className="center"
+    src="https://img.shields.io/badge/CSS3-1572B6?style=flat&logo=CSS3&logoColor=white"
+  />
+  <img
+    className="center"
+    src="https://img.shields.io/badge/github-181717?style=flat&logo=github&logoColor=white"
+  />
 </p>
