post - 'rendering engine'

--- a/data/blog/rendering-engine.mdx
+++ b/data/blog/rendering-engine.mdx
@@ -87,12 +87,18 @@ _로딩 최적화 더 알아보기!_ - [optimizing-Loading](https://seokzin.tist
    <br />
 
 1. 각 요소의 크기와 위치를 계산한다. (Layout 단계)
-   <img src="/static/images/rendering-engine/viewport-layout.png" />
+   <p align="center">
+     <img src="/static/images/rendering-engine/viewport-layout.png" />
+   </p>
 1. 요소를 실제로 픽셀로 변환하여 그린다. (Paint 단계, Rasterize)
 
-   <img src="/static/images/rendering-engine/viewport-paint.png" />
+   <p align="center">
+     <img src="/static/images/rendering-engine/viewport-paint.png" />
+   </p>
    픽셀로 그려진 여러 레이어를 합성한다. (Compositing 단계)
-   <img src="/static/images/rendering-engine/viewport-compositing.png" />
+   <p align="center">
+     <img src="/static/images/rendering-engine/viewport-compositing.png" />
+   </p>
 
    <br />
    <br />
