--- a/data/blog/rendering-engine.mdx
+++ b/data/blog/rendering-engine.mdx
@@ -9,6 +9,10 @@ layout: PostLayout
 canonicalUrl: https://sos-code.vercel.app/blog/Rendering-engine
 ---
 
+## Overview
+
+<TOCInline toc={props.toc} exclude="Overview" />
+
 # Processing
 
 **브라우저는 HTML,CSS를 parsing하는 과정을 거쳐 render 할 수 있는 형태인 DOM Tree로 만들고 그려준다.**
