--- a/data/blog/book-execution-context.mdx
+++ b/data/blog/book-execution-context.mdx
@@ -9,13 +9,13 @@ layout: PostLayout
 canonicalUrl: https://sos-code.vercel.app/blog/book-execution-context
 ---
 
-### 실행컨텍스트
+## 실행컨텍스트
 
 실행할 코드에 제공할 환경 정보들을 모아놓은 객체
 
 - 호이스팅, 외부 환경 정보 구성, this 값을 설정
 
-## 스택stack과 큐queue
+### 스택stack과 큐queue
 
 p37 그림 2-2
 
@@ -30,3 +30,54 @@ p37 그림 2-2
 p38
 
 p40 그림 2-4
+
+### VariableEnvironment
+
+실행컨텍스트의 inner는 VariableEnvironment와 LexicalEnvironment, ThisBinding으로 구성된다.
+VariableEnvironment는 LexicalEnvironment와 같지만 최초 실행시의 스냅샷을 유지한다.
+
+> 실행컨텍스트를 생성할 때 VariableEnvironment에 정보를 먼저 담은 다음, 이를 그대로 복사해서 LexicalEnvironment를 만들고 이후 LexicalEnvironment를 주로 활용한다.
+
+### LexicalEnvironment
+
+'어휘적 환경', '정적 환경'
+environmentRecord와 outer-EnvironmentReference로 구성
+
+1.  environmentRecord와 호이스팅
+    environmentRecord에는 컨텍스트와 관련된 코드의 식별자 정보(식별자, 함수)들이 저장. 처음부터 읽으면서 순서대로 저장된다.
+    ! 전역 실행 컨텍스트는 전역 객체(window, global객체 등)를 활용한다. 이들은 내장객체가 아닌 호스트 객체로 분류된다.
+
+    따라서 자바스크립트 엔진은 코드 실행 전에 이미 코드의 변수명들을 모두 알고 있다. > 호이스팅
+
+    ## 호이스팅
+
+    environmentRecord에는 매게변수의 이름, 함수 선언, 변수명 등이 담긴다.
+    p44 예제 2-4 > 예제 2-2 에서 1, undefined, 2가 아닌 1, 1, 2가 출력되는 이유
+
+    그럼 함수를 호이스팅 한다면?
+    p47 예제 2-7 > 예제 2-5 에서 undefined 또는 error, 'bbb', fuction b 가 아닌 fuction b, 'bbb', 'bbb' 가 출력되는 이유 \*함수 선언 전체를 끌어올린다.
+
+    ## 함수 선언문과 함수 표현식
+
+    p48 예제 2-8
+
+    ! 기명 함수 표현식은 외부에서 함수명으로 함수를 호출할 수 없음 오직 함수 내부에서만 함수명으로 접근할 수 있음 > 재귀함수를 호출하는 용도
+    근데 굳이...
+
+    p49 예제 2-10 함수 선언문과 함수 표현식의 호이스팅 차이 \*함수 선언문은 전체를 호이스팅, 함수 표현식은 변수 선언부만 호이스팅
+    따라서 함수 표현식은 error가 나옴 변수만 끌어올려지고 할당 부분은 원래 자리에 남겨져 있기 때문
+
+    "선언한 후에야 호출할 수 있다."
+
+    p51 예제 2-11 같은 함수명의 함수 선언문을 뒤늦게 추가함 > 두개 다 끌어올려짐 > 뒤늦게 작성한 함수로 덮어쓰여짐 > 이전에 작성했던 코드의 결과값이 달라짐 > 에러 찾기 어려움
+
+    > 함수 표현식이 안전하다.
+
+2.  스코프, 스코프 체인, outerEnvironmentReference
+    스코프란 식별자에 대한 유효범위이다. 식별자의 유효범위를 안에서부터 바깥으로 차례로 검색해나가는 것을 스코프 체인이라고 한다.
+    그리고 이를 가능하게 하는 것이 outerEnvironmentReference이다.
+
+        ## 스코프 체인
+        outerEnvironmentReference는 현재 호출된 함수가 선언될 당시의 LexicalEnvironment를 참조한다.
+        "선언할 당시" === 콜스택상에서 어던 실행 컨텍스트가 활성화된 상태일때
+        따라서 자신이 선언될 당시의 LexicalEnvironment를 참조하기 때문에 가장 가까운 요소부터 차례대로만 접근할 수 있고 다른 순서로 접근할 수 없다. > 무조건 스코프 체인 상에서 가장 먼저 발견된 식별자에만 접근이 가능하다.
