post - 'book-reivew-this'

--- a/data/blog/book-execution-context.mdx
+++ b/data/blog/book-execution-context.mdx
@@ -1,7 +1,7 @@
 ---
-title: 'review - Execution context'
+title: 'review - 02 Execution context'
 date: '2024-01-02'
-lastmod: '2024-01-02'
+lastmod: '2024-01-04'
 tags: ['javascript', 'book', 'study']
 draft: false
 summary: '코어 자바스크립트를 읽고 실행컨텍스트에 대해 더 알아보자.'
