post - 'book-reivew-this'

--- a/data/blog/book-this.mdx
+++ b/data/blog/book-this.mdx
@@ -623,3 +623,12 @@ p87 예제 3-25
 - call, apply는 this를 명시적으로 지정하면서 호출한다.
 - bind는 this및 함수에 넘길 인수를 일부 지정해서 새로운 함수를 반환한다.
 - 요소를 순회하면서 콜백함수를 반복 호출하는 내용의 일부 메서드는 별도의 인자로 this를 받기도 한다.
+
+<details>
+<summary>출처</summary>
+<div markdown="1">
+
+_이 글은 코어 자바스크립트 책을 읽고 2장 실행 컨텍스트를 정리한 내용을 작성한 글입니다._
+
+</div>
+</details>
