--- a/data/blog/book-this2.mdx
+++ b/data/blog/book-this2.mdx
@@ -1,238 +1,15 @@
 ---
-title: 'review - 03 This'
+title: 'review - 03 This ------ 2'
 date: '2024-01-05'
 lastmod: '2024-01-10'
 tags: ['javascript', 'book', 'study']
 draft: false
-summary: '코어 자바스크립트를 읽고 This에 대해 더 알아보자.'
+summary: '코어 자바스크립트를 읽고 this에 대해 더 알아보자. - 2편'
 layout: PostLayout
-canonicalUrl: https://sos-code.vercel.app/blog/book-this
+canonicalUrl: https://sos-code.vercel.app/blog/book-this2
 ---
 
-: 다른 대부분의 객체 지향언어에서 this는 클래스로 생성한 인스턴스 객체를 의미한다. 하지만 자바스크립트에서의 this는 어디에서든 사용할 수 있기 때문에 상황에 따라 this의 대상이 달라진다.
-
-# This
-
-자바스크립트에서 this는 실행 컨텍스트가 생성될 때 함께 결정된다. > 함수를 호출할 때 결정된다.
-
-## 상황에 따라 달라지는 this
-
-1. 전역 공간에서의 this
-   전역 객체, 자바스크립트 런타임 환경에 따라 다른 이름과 정보를 가지고 있다. 브라우저 환경에서 전역객체는 window이고 nodw.js 환경에서는 global이다.
-
-- 전역변수를 선언하면 자바스크립트 엔진은 이를 전역객체의 프로퍼티로도 할당한다. 변수이면서 객체의 프로퍼티이기도하다.
-  p66 예제 2-2
-
-```
-
-var a = 1;
-console.log(a);  // 1
-console.log(window.a);  // 1
-console.log(this.a);  // 1
-
-```
-
-window.a와 this.a 모두 1이 출력, 같은건 이해하지만 왜 1일까?
-
-- 자바스크립트의 모든 변수는 실은 특정 객체의 프로퍼티로 동작하기 때문
-  사용자가 var 연산자를 이용해 변수를 선언했어도 자바스크립트엔진은 어떤 특정 객체의 프로퍼티로 인식한다.
-
-특정 객체란 ? LexicalEnvironment(L.E)이다. 실행컨텍스트는 변수를 수집해서 L.E의 프로퍼티로 저장한다.
-
-따라서 var로 변수를 선언하는 대신 window의 프로퍼티에 집적 할당하더라도 같은 결과를 낼 수 있다.
-p68 예제 3-4
-
-```
-
-var a = 1;
-window.b = 2;
-console.log(a, window.a, this.a); // 1 1 1
-console.log(b, window.b, this.b); // 2 2 2
-
-```
-
-하지만 delete 연산자는 다르게 작동한다.
-
-p68 예제3-5
-
-```
-
-var a = 1;
-delete window.a;    // false
-console.log(a, window.a, this.a);   /// 1 1 1
-
-window.c = 3;
-delete window.c; // true
-console.log(c, window.c, this.c);  // Uncaught ReferenceError: c is not defined
-
-```
-
-2. 메서드로서 호출할 때 그 메서드 내부에서의 this
-
-### 함수 vs 메서드
-
-'어떤 함수를 객체의 메서드로서 호출할 경우에만 메서드로 동작하고, 그렇지 않으면 함수로 동작한다.'
-함수로서의 호출과 메서드로서의 호출은 함수 앞의 점(.)으로 구분한다.
-함수 앞에 점이 있으면? 메서드로서의 호출이다. (대괄호 표기법도 포함)
-
-p71 예제 3-7
-
-```
-var obj = {
-    method: function (x) { console.log(this, x); }
-};
-
-obj.method(1);   // { method: f } 1
-obj['method'](2);   // { method: f } 2
-
-```
-
-즉, 어떤 함수를 호출할 때 그 함수 이름(프로퍼티명) 앞에 객체가 명시돼 잇는 경우에는 메서드로 호출한 것이다.
-
-### 메서드 내부에서의 this
-
-메서드로서 호출하는 경우 호출 주체는 함수명(프로퍼티명)앞의 객체이다. 점 앞의 객체가 곧 this!
-p71 예제 3-8
-
-```
-
-var obj = {
-methodA: function () { console.log(this); },
-    inner: {
-        methodB: function () { console.log(this); }
-    }
-};
-
-object.methodA();   // {methodA: f, inner: {...} } ( === obj )
-object.inner.methodB();  // {methodB: F} ( === obj.inner)
-
-```
-
-3. 함수로서 호출할 때 그 함수 내부에서의 this
-
-### 함수 내부에서의 this
-
-어떤 함수를 함수로서 호출하는 경우에는 this가 지정되지 않는다. this에는 호출한 주체가 담기는데 함수로서 호출하는 것은 호출 주체의 정보를 알 수 없다.
-지정되지 않는 this는 전역 객체를 바라본다. 따라서 함수에서의 this는 전역 객체를 가리킨다.
-
-### 메서드의 내부함수에서의 this
-
-내부함수에서의 this > 함수로서 호출했는지, 메서드로서 호출했는지 파악하는게 중요하다.
-
-p72 예제 3-9
-
-```
-
-var obj1 = {
-	outer: function() {
-		console.log(this);   // (1)
-		var innerFunc = function() {
-			console.log(this);    // (2) 전역객체(window) (3)obj2
-		}
-		innerFunc(); // --- (2) (3)
-
-		var obj2 = {
-			innerMethod : innerFunc
-		};
-		object2.innerMethod();
-	}
-}
-obj1.outer();
-
-```
-
-1. 객체를 생성, 객체 내부에는 outer 프로퍼티 - 익명함수가 연결, 생성된 객체를 변수 obj1에 할당
-2. obj1.outer() 호출
-3. obj1.outer 함수의 실행 컨텍스트가 생성되면서 호이스팅하고, 스코프 체인 정보 수집하고, this 바인딩
-   호출할때 outer 앞에 .이 있었으므로 메서드로서의 호출 > this 는 점 앞에 obj1
-4. console.log(this) --- (1) : obj1 객체 정보가 출력
-5. 호이스팅된 변수 **innerFunc**는 outer 스코프 내에서만 접근할 수 있는 지역변수, 이 지역변수에 익명 함수 할당
-6. innerFunc() 호출
-7. innerFunc 실행 컨텍스트가 생성되면서 호이스팅, 스코프 체인 수집, this 바인딩 수행
-   이 함수를 호출할 때 함수명 앞에는 .이 없으므로 함수로서의 호출 > this 지정 X, 자동으로 전역객체(Window) 바인딩
-8. console.log(this) --- (2) : Window 객체 정보가 출력
-9. 호이스팅 된 변수 **obj2**도 outer 스코프 내에서만 접근할 수 있는 지역변수, 여기에는 객체를 할당
-   이 객체에는 innerMethod라는 프로퍼티, 이 프로퍼티에 innerFunc와 연결된 익명 함수와 연결
-10. obj2.innerMethod() 호출
-11. obj2.innerMethod 실행 컨텍스트가 생성
-    이 함수를 호출할때 앞에 .이 있으므로 메서드로서의 호출 > this는 점 앞에 obj2
-12. console.log(this) --- (3) : obj2 객체 정보가 출력
-
-실행 결과 (1): { outer: f }, (2): Window { parent: ... }, (3): { innerMethod: f}
-
-같은 innerFunc함수임에도 바인딩되는 this의 대상이 서로 달라졌다. > 주변 환경은 중요하지 않고 해당 함수를 호출하는 구문 앞에 점 또는 대괄호 표기가 있는지가 중요하다.
-
-### 메서드의 내부 함수에서의 this를 우회하는 방법
-
-호출 주체가 없을 때는 자동으로 전역객체를 바인딩하지 않고 호출 당시 주변 환경의 this를 그대로 상속받아 사용하고 싶다. > 스코프 체인과 일관성을 지키고 싶다.
-
-하지만 ES5까지는 자체적으로 내부함수에 this를 상속할 방법이 없다.
-대신 우회하는 방법이 변수를 활용하는 것이다.
-
-p75 예제 3-10
-
-```
-
-var obj1 = {
-	outer: function() {
-		console.log(this);   // (1) { outer: f }
-		var innerFunc1 = function() {
-			console.log(this);    // (2) Window { ... }
-		}
-		innerFunc1();
-
-        var self = this;
-		var innerFunc2 = function() {
-			console.log(self);    // (3) { outer: f }
-		}
-		innerFunc2();
-	}
-}
-obj1.outer();
-
-```
-
-> 상위 스코프의 this를 저장해서 내부함수에서 활용한다.
-
-### this를 바인딩하지 않는 함수
-
-ES6에서는 함수 내부에서 this가 전역객체를 바라보는 문제를 보완하고자, this를 바인딩하지 않는 화살표 함수를 새로 도입했다.
-화살표함수는 실행 컨텍스트를 생성할 때 this 바인딩 과정을 생략해 상위 스코프의 this를 그대로 활용할 수 있다.
-
-p76 예제 3-11
-
-```
-
-var obj = {
-	outer: function() {
-		console.log(this);    // (1) { outer: f}
-		var innerFunc = () => {
-			console.log(this);  // (2) { outer: f}
-		};
-		innerFunc();
-	}
-}
-obj.outer();
-
-```
-
-4. 콜백 함수 호출 시 그함수 내부에서의 this
-
-   콜백함수? 함수 A의 제어권을 다른 함수(또는 메서드) B에게 넘겨주는 경우 함수 A를 콜백 함수라 한다.
-
-   - 제어권을 가지는 함수(메서드)가 콜백 함수에서의 this를 무엇으로 할지를 결정, 특별히 정의하지 않은 경우에는 전역객체를 바인딩한다.
-
-   ```
-   p77 addEventListener...
-   ```
-
-5. 생성자 함수 내부에서의 this
-
-   생성자 함수는 어떤 공통된 성질을 지니는 객체들을 생성하는 데 사용하는 함수이다.
-   객체지향언어에서는 생성자를 클래스, 클래스를 통해 만든 객체를 인스턴스라고 한다.
-
-   자바스크립트에서는 new 명령어와 함께 함수를 호출하면 함수가 생성자로 동작한다. 이 내부에서의 this는 인스턴스 자신이 된다.
-   즉, new와 함께 함수 호출: 생성자 함수 호출 > 생성자의 prototype을 참조하는 **proto** 가 있는 객체(인스턴스)를 생성 > 미리 준비된 공통 속성을 객체(this)에 부여
+> 다른 대부분의 객체 지향언어에서 this는 클래스로 생성한 인스턴스 객체를 의미한다. 하지만 자바스크립트에서의 this는 어디에서든 사용할 수 있기 때문에 상황에 따라 this의 대상이 달라진다.
 
 ## 명시적으로 this를 바인딩하는 방법
 
